--- a/.gitignore
+++ b/.gitignore
@@ -193,7 +193,7 @@ fabric.properties
 .idea/httpRequests
 
 # Input Folders
-/input
+/input/benchmarks
 /logs
 /output
 /temp
@@ -203,4 +203,3 @@ fabric.properties
 
 # Personal Overrides
 !scripts/sh
-!scripts/tcl
