--- a/input/templates/testbench.template
+++ b/input/templates/testbench.template
@@ -71,14 +71,17 @@ module {{ module_name }};
     logic ex_ready_o;
     logic wb_ready_o;
     logic illegal_instr_o;
+    logic branch_decision_o;
+    logic branch_req_o;
 
     trace_output trace_o;
 
     riscv_core  #(1, `DATA_WIDTH) core(.*);
 
-    dragreder #(`ADDR_WIDTH, `DATA_WIDTH, `ADDR_WIDTH) tracer(clk_i, rst_ni, if_busy_o, if_ready_o,
+    dragreder #(`ADDR_WIDTH, `DATA_WIDTH, `ADDR_WIDTH) tracer(
+    clk_i, rst_ni, if_busy_o, if_ready_o, branch_decision_o,
     instr_req_o, instr_addr_o, instr_gnt_i,  instr_rvalid_i, instr_rdata_i,
-    id_ready_o, jump_done_o, is_decoding_o,illegal_instr_o, ex_ready_o,
+    id_ready_o, jump_done_o, is_decoding_o,illegal_instr_o, branch_req_o, ex_ready_o,
     data_req_o, data_gnt_i, data_rvalid_i, data_addr_o, wb_ready_o, trace_o);
 
     initial
